--- a/histora-care/src/app/patient/search/search.page.scss
+++ b/histora-care/src/app/patient/search/search.page.scss
@@ -220,6 +220,7 @@ ion-footer {
     --border-radius: 12px;
     height: 48px;
     font-weight: 600;
+    --color: #ffffff;
   }
 }
 
